2001-12-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda-report/gda-report-document.c
	(gda_report_document_new_from_uri): implemented

	* libgda-report/gda-report-client.[ch]
	(gda_report_client_run_document): implemented

	* libgda-report/gda-report-datasource.[ch]: new files

	* idl/GNOME_Database_Report.idl: made runDocument use
	Bonobo::Stream's instead of simple string's, since we
	might be sending back and forth very big chunks of data.
	Added GNOME::Database::Report::DataSource interface

2001-12-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda-report/gda-report-document.[ch]: new files for managing
	the XML format used for reports
	(gda_report_document_new_from_string): new function
	(gda_report_document_new_from_uri): new function

2001-12-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* main.c: main file for the engine binary

	* gda-report-engine.[ch]: GNOME::Database::Report::Engine object
	implementation

	* GNOME_Database_Report.server.in: added

	* idl/GNOME_Database_Report.idl: 1st phase of the report engine is
	very simple, so reflect that in the IDL. Also, reuse definitions
	from GNOME::Database

	* libgda-report/gda-report-client.[ch]: new files

2001-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* common/*:
	* engine/*: removed for restructuration

	* libgda-report/: new directory to contain the report library

2001-11-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* common/Makefile.am: added BONOBO_IDL_DIR for IDL compilation

2001-11-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am:
	* common/Makefile.am:
	* engine/Makefile.am: fixed for new locations

2001-10-29  Akira TAGOH <tagoh@gnome-db.org>

	* Makefile.am: Added library age.

2001-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-report-client.[ch]: converted to GObject

	* common/: new directory for libgdareport-common

2001-07-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-report.h: main header file for the report library
