@@ -1,3 +1,12 @@
+2001-12-26  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-report-engine.[ch] (gda_report_engine_get_gda_client): new
+	function for getting the global GdaClient object being used
+
+	* libgda-report/gda-report-datasource.[ch]: fixed for compilation
+
+	* idl/GNOME_Database_Report.idl: fixed
+
 2001-12-25  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* libgda-report/gda-report-document.c
